--- a/spec/topic.api.yaml
+++ b/spec/topic.api.yaml
@@ -20,17 +20,93 @@ paths:
                 $ref: "#/components/schemas/TopicList"
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+  /topic/{topic}:
+    get:
+      tags:
+        - topic
+      summary: "Describe a topic"
+      description: "List Kafka messages on the topic of choice"
+      operationId: describe
+      parameters:
+        - $ref: "#/components/parameters/topic"
+        - $ref: "#/components/parameters/limit"
+        - $ref: "#/components/parameters/offset"
+        - $ref: "#/components/parameters/partition"
+      responses:
+        "200":
+          description: "Message list"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Messages"
+        "400":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+        "404":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+        "500":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 
 components:
+  parameters:
+    topic:
+      in: path
+      name: topic
+      required: true
+      schema:
+        $ref: "#/components/schemas/TopicName"
+    limit:
+      in: query
+      name: limit
+      schema:
+        type: integer
+    offset:
+      in: query
+      name: offset
+      schema:
+        type: integer
+    partition:
+      in: query
+      name: partition
+      schema:
+        type: integer
   schemas:
+    TopicName:
+      type: string
     Topic:
       type: object
       properties:
         name:
-          type: string
+          $ref: "#/components/schemas/TopicName"
       required:
         - name
     TopicList:
       type: array
       items:
         $ref: "#/components/schemas/Topic"
+    Message:
+      type: object
+      properties:
+        key:
+          type: string
+        partition:
+          type: integer
+        offset:
+          type: integer
+        message:
+          type: object
+      required:
+        - key
+        - partition
+        - offset
+        - message
+    MessageList:
+      type: array
+      items:
+        $ref: "#/components/schemas/Message"
+    Messages:
+      type: object
+      properties:
+        messages:
+          $ref: "#/components/schemas/MessageList"
+      required:
+        - messages
