--- a/spec/node.xapi.yaml
+++ b/spec/node.xapi.yaml
@@ -25,11 +25,7 @@ paths:
       tags:
         - node
       parameters:
-        - in: path
-          name: nodeType
-          required: true
-          schema:
-            type: string
+        - $ref: "#/components/parameters/nodeType"
         - in: query
           name: namespace
           required: false
@@ -52,22 +48,35 @@ paths:
                 $ref: "#/components/schemas/NodeList"
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+  /node/{nodeType}/{nodeId}:
+    delete:
+      tags:
+        - node
+      parameters:
+        - $ref: "#/components/parameters/nodeType"
+        - $ref: "#/components/parameters/nodeId"
+        - in: query
+          name: timeoutSeconds
+          schema:
+            type: integer
+            format: int64
+      summary: "Node deletion API"
+      description: "Delete a locked node"
+      operationId: delete
+      responses:
+        "200":
+          description: "Node deleted"
+        "404":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+        "500":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
   /node/{nodeType}/{nodeId}/unlock:
     post:
       tags:
         - node
       parameters:
-        - in: path
-          name: nodeType
-          required: true
-          schema:
-            type: string
-        - in: path
-          name: nodeId
-          required: true
-          schema:
-            type: integer
-            format: int64
+        - $ref: "#/components/parameters/nodeType"
+        - $ref: "#/components/parameters/nodeId"
       summary: "Node unlock API"
       description: "Unlock a locked node"
       operationId: unlock
@@ -82,6 +91,21 @@ paths:
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 
 components:
+  parameters:
+    nodeType:
+      in: path
+      name: nodeType
+      required: true
+      schema:
+        type: string
+    nodeId:
+      in: path
+      name: nodeId
+      required: true
+      schema:
+        type: integer
+        format: int64
+
   schemas:
 
     NodeTypes:
